--- a/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage_test.html
+++ b/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage_test.html
@@ -35,15 +35,15 @@
 package fr.paris.lutece.plugins.${radical_package}.web;
 
 import fr.paris.lutece.portal.service.admin.AccessDeniedException;
-import fr.paris.lutece.portal.service.message.SiteMessageException;
-import fr.paris.lutece.portal.web.LocalVariables;
 import fr.paris.lutece.test.LuteceTestCase;
-import fr.paris.lutece.portal.service.security.SecurityTokenService;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.mock.web.MockServletConfig;
-import java.util.List;
 <#if business_class??>
+import fr.paris.lutece.portal.service.security.SecurityTokenService;
+import java.util.List;
+import fr.paris.lutece.portal.service.message.SiteMessageException;
+import fr.paris.lutece.portal.web.LocalVariables;
 <#list business_class.attributes as attribute>
 	<#if attribute.type = "Date">
 		<#assign hasDate = true>
@@ -175,7 +175,7 @@ import fr.paris.lutece.plugins.${radical_package}.business.${plugin_application.
 /**
  * This is the application class test for the object ${plugin_application.applicationName}
  */
-public class ${plugin_application.applicationName}XPageTest extends LuteceTestCase
+public class ${plugin_application.applicationName}AppTest extends LuteceTestCase
 {
 
 
@@ -185,8 +185,9 @@ public void testXPage(  ) throws AccessDeniedException
         MockHttpServletRequest request = new MockHttpServletRequest( );
         MockHttpServletResponse response = new MockHttpServletResponse( );
         MockServletConfig config = new MockServletConfig( );
+        ${plugin_application.applicationName}App xPageTest = new ${plugin_application.applicationName}App( );
 
-        assertNotNull( viewHome( request ) );
+        assertNotNull( xPageTest.viewHome( request ) );
     }
     
 }
