PLUGINWIZARD-149 : fix XPage without business class wrong name

--- a/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage.html
+++ b/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage.html
@@ -262,7 +262,7 @@ import javax.servlet.http.HttpServletRequest;
  * This class provides a simple implementation of an XPage
  */
 @Controller( xpageName = "${plugin_application.applicationName}" , pageTitleI18nKey = "${msg}.xpage.${plugin_application.applicationName}.pageTitle" , pagePathI18nKey = "${msg}.xpage.${plugin_application.applicationName}.pagePathLabel" )
-public class ${plugin_application.applicationName}${plugin_application.applicationClass} extends MVCApplication
+public class ${plugin_application.applicationClass} extends MVCApplication
 {
     /**
      * 
